[workspace]
members = ["rustest", "rustest-macro", "rustest-testing", "rustest-fixtures"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/mgautierfr/rustest"
homepage = "https://github.com/mgautierfr/rustest"
license = "MIT OR Apache-2.0"
description = "Better test your program."
keywords = ["test", "fixture", "harness", "dev-dependencies", "test-fixtures"]
categories = ["development-tools", "development-tools::testing"]
