[package]
name = "rustest-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
