[package]
name = "rustest-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
