[package]
name = "rustest-testing"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustest = { path = "../rustest", features = ["googletest"] }
rustest-fixtures = { path = "../rustest-fixtures" }

[dev-dependencies]
googletest = "0.14.0"
regex = "1.11.1"

[[bin]]
name = "simple_test"
doc = false

[[bin]]
name = "ignored_test"
doc = false

[lib]
harness = false

[[test]]
name = "scope_test"
harness = false
