[package]
name = "rustest"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ctor = { version = "0.4.1", features = ["__no_warn_on_missing_unsafe"] }
googletest = { version = "0.14.0", optional = true }
libtest-mimic = "0.8.1"
rustest-macro = { version = "0.1.0", path = "../rustest-macro" }

[features]
googletest = ["dep:googletest"]

[[test]]
name = "test"
harness = false
